--- a/style.css
+++ b/style.css
@@ -4,23 +4,50 @@
     box-sizing: border-box;
 }
 
-.title{
-    text-align: center;
-    margin : 20px;
+body{
+    background-color:mistyrose;
+    font-family: 'Indie Flower', cursive;
 }
+
 .container{
     display : flex;
     flex-direction: row;;
+    justify-content: center;
+    align-items: center;
+    gap : 100px;
 }
-
+.header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin : 20px;
+}
 
 .maze{
     display : flex;
     flex-wrap: wrap;
     width : 700px;
     height : 700px;
-    margin : 0 auto;
     border : 1px solid black;
+}
+.side-bar{
+    display: flex;
+    flex-direction: column;
+    gap : 100px;
+}
+
+button{
+    font-size : xx-large;
+    width: 200px;
+    height : 70px;
+    border-radius: 50px;
+}
+
+.resize-container{
+    display: flex;
+    flex-direction: column;
+    gap : 20px;
 }
 
 .maze-cell {
