--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 }
 
 body{
-    background-color:mistyrose;
     font-family: 'Indie Flower', cursive;
 }
 
@@ -38,10 +37,21 @@ body{
 }
 
 button{
-    font-size : xx-large;
+    font-family: 'Indie Flower', cursive;
+    background-color: white;
+    font-size : 30px;
     width: 200px;
     height : 70px;
-    border-radius: 50px;
+    border-radius: 20px;
+    transition : all 0.2s;
+    transition-timing-function: ease-out;
+}
+
+button:hover{
+    cursor : pointer;
+    font-size : 25px;
+    width : 190px;
+    height : 65px;
 }
 
 .resize-container{
