--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ button:hover{
 
 .start-cell, .end-cell{
     position: relative;
-    background-color :darkslateblue;
+    background-color :lightskyblue;
 }
 
 a{
